attempt to fix overlap of about me over projects

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ a:hover {
 }
 
 #projects h2.heading {
-  margin-top: 140px;
+  margin-top: 280px;
 }
 
 #lead-content {
